--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/common-tags": "^1.8.0",
     "common-tags": "^1.8.0",
     "discord.js": "^12.5.1",
+    "fs": "^0.0.1-security",
     "glob": "^7.1.6",
     "mongoose": "^5.13.6",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "opusscript": "^0.0.8"
   }
 }
