--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/bot.ts",
     "build": "tsc",
-    "start": "ts-node-dev --respawn --transpile-only --poll ./src/bot.ts"
+    "start": "ts-node-dev --respawn --transpile-only --poll ./src/bot.ts",
+    "server": "nodemon ts-node-dev --respawn --transpile-only --poll ./src/bot.ts"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -28,6 +29,7 @@
     "glob": "^7.1.6",
     "mongoose": "^5.13.6",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.13",
     "opusscript": "^0.0.8"
   }
 }
