--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/ms": "^0.7.31",
     "@types/node": "^14.14.10",
     "@types/node-fetch": "^2.5.11",
     "ts-node-dev": "^1.0.0-pre.49",
@@ -25,9 +26,11 @@
     "@types/common-tags": "^1.8.0",
     "common-tags": "^1.8.0",
     "discord.js": "^12.5.1",
+    "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
     "glob": "^7.1.6",
     "mongoose": "^5.13.6",
+    "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.13",
     "opusscript": "^0.0.8"
